--- a/assets/style.scss
+++ b/assets/style.scss
@@ -491,8 +491,9 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+   /* width: 100%;
+    height: 100%;*/
+    @include wihe (100%,100%);
     background-color: rgba(0, 0, 0, .5);
     z-index: 2;
     transform: translateX(-200%);
@@ -500,9 +501,10 @@ body{
   }
   
   .cart-modal {
-    height: 100vh;
-    width: 50%;
-    background-color: rgb(50,50,50);
+    /*height: 100vh;
+    width: 50%;*/
+    @include wihe (50%,100vh);
+    background-color:$taupe;
     float: right;
     overflow: scroll;
     overflow-x: hidden;
@@ -546,7 +548,7 @@ body{
   .purchase-btn {
     font-size: 1rem;
     font-weight: bolder;
-    background-color: green;
+    background-color:$bleu;
     color: white;
     padding: 1em 2em;
     border-radius: 10px;
